usuarios añadidos a la base de datos

--- a/springsecurityapp/src/main/resources/application.properties
+++ b/springsecurityapp/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuración de logs
 # logging.level.com.vtes.backend_vtes=DEBUG
